[package]
name = "dnsolve_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "dnsolve_native"
crate-type = ["cdylib"]

[package.metadata.xcframework]
include-dir = "include"
lib-type = "cdylib"
zip = false
build-std = false
macOS = false
simulators = true
iOS = true

[dependencies]
hickory-resolver = { version = "0.24", features = ["dnssec-ring"] }
hickory-proto = "0.24"
tokio = { version = "1", features = ["rt", "net", "time"] }
serde_json = "1"
libc = "0.2"

[profile.release]
opt-level = "s"
lto = true
strip = true
